pilot/pkg/security/authz/builder/testdata/http/custom-multiple-providers-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  action: CUSTOM
  provider:
    name: provider-1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
#    - from:
#        - source:
#            namespaces:
#              - istio-system
    - to:
        - operation:
            hosts:
              - www.example1.com
            paths:
              - /httpbin1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-2
  namespace: foo
spec:
  action: CUSTOM
  provider:
    name: provider-2
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
#    - from:
#        - source:
#            namespaces:
#              - istio-system
    - to:
        - operation:
            hosts:
              - www.example2.com
            paths:
              - /httpbin2
